--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
     "express": "^4.18.2",
+    "gsap": "^3.12.5",
+    "imports-loader": "^5.0.0",
     "rxjs": "~7.8.0",
+    "scrollmagic": "^2.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -33,6 +36,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/scrollmagic": "^2.0.8",
     "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
